style: Purchase History Done

--- a/templates/includes/dashboard_sidebar.html
+++ b/templates/includes/dashboard_sidebar.html
@@ -62,11 +62,11 @@
         </a>
       </li>
       <li>
-        <a href="/your-plan" class="text-xs lg:text-base relative after:content-[''] after:absolute after:bottom-2 after:left-full after:w-1 after:lg:h-6 after:h-4 after:bg-black after:rounded-r-full after:opacity-0 flex items-center gap-3 lg:px-4 px-2 lg:py-2 py-1.5 rounded-lg transition-colors {% if active_page == 'your-plan' %}after:opacity-100 bg-white text-black border border-[#E4E8EF]{% else %}text-gray-800 hover:bg-gray-100 hover:after:opacity-100{% endif %}">
+        <a href="/purchase-history" class="text-xs lg:text-base relative after:content-[''] after:absolute after:bottom-2 after:left-full after:w-1 after:lg:h-6 after:h-4 after:bg-black after:rounded-r-full after:opacity-0 flex items-center gap-3 lg:px-4 px-2 lg:py-2 py-1.5 rounded-lg transition-colors {% if active_page == 'purchase-history' %}after:opacity-100 bg-white text-black border border-[#E4E8EF]{% else %}text-gray-800 hover:bg-gray-100 hover:after:opacity-100{% endif %}">
           <svg class="size-4 lg:size-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 10h18M7 15h1m4 0h1m-7 4h12a3 3 0 003-3V8a3 3 0 00-3-3H6a3 3 0 00-3 3v8a3 3 0 003 3z"></path>
           </svg>
-          <span class="font-medium">Your Plan</span>
+          <span class="font-medium">Purchase History</span>
         </a>
       </li>
     </ul>
